# worker-vllm

./: .env  .example-testenv  .gitignore  .gitmodules  Dockerfile  Dockerfile.custom  LICENSE  MULTIMODAL_INSTRUCTIONS.md  README.md  dev  dev.pub  docker-bake.hcl  entrypoint.sh  handler.py  pyproject.toml  run_multiple.sh  start.sh  test.py  vllm-loadbalancer-ep.code-workspace  worker-config.json
.github/: CONTRIBUTING.md
.github/workflows/: CD-docker_dev.yml  CD-docker_release.yml  CI-readme_version_sync.yml  CI-runpod_dep.yml  CI-test_worker.yml  dev.yml  docker-build-release.yml  docker-image.yml  release.yml  slack-pr-issue-notify.yml  slack-vllm-monitor.yml  test.yml
.runpod/: README.md  hub.json  tests.json
builder/: download_model.py  requirements.txt  setup.sh
configs/gemma/: gemma4_31b_it.yaml
configs/gpt-oss/: gpt_oss_120b.yaml
configs/llama/: llama3.1_8b_instruct.yaml
configs/qwen/: qwen3_8b.yaml
docs/: configuration.md  conventions.md
openai/: server.py  test_openai_stream.py  test_openai_worker.py  vllm_openai.py
src/: __init__.py  benchmark.py  config.py  constants.py  download_lora_adapter.py  download_model.py  engine.py  engine_args.py  handler.py  handler_custom.py  metrics.py  multimodal.py  sampling_params.py  templates.py  test_openai_stream.py  tokenizer.py  utils.py
tests/: conftest.py  fastapi_tests.py  middleware.py  requirements.txt  test_engine_args.py
vllm-base/: Dockerfile  download_required_files.sh
vllm-base-image/: Dockerfile  README.md  vllm-metadata.yml
